--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,11 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+ion-content{
+  --background: var(--ion-color-success);
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+} 
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.text { justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 100%;
 }
